Tue Oct 21 17:33:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdio.{h,cpp}:
          Buf argument of sscanf should be const

Tue Oct 21 14:35:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Bug_2980_Regression_Test.cpp:

          Fixed fuzz errors (lack of ACE_OS::).

Tue Oct 21 14:21:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Process_Manager_Test.cpp:
        * tests/Multicast_Test_IPV6.cpp:
        * tests/Bug_2980_Regression_Test.cpp:

          Fixed fuzz errors (lack of ACE_OS::).

Tue Oct 21 14:15:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Process_Manual_Event_Test.cpp:
        * tests/Process_Env_Test.cpp:
        * tests/Multicast_Test.cpp:
        * tests/Proactor_UDP_Test.cpp:

          Fixed fuzz errors (lack of ACE_OS::).

Tue Oct 21 13:53:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-netbsd.h:
          NetBSD lacks wscanf and swscanf

Tue Oct 21 12:41:09 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * apps/gperf/src/Options.h:
        * apps/gperf/src/Options.cpp:
        * ACEXML/common/HttpCharStream.cpp:

          Fixed incorrect use of ACE_TEXT_* conversion macros.

Tue Oct 21 11:25:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Changed ACE_OS test to level 5

Tue Oct 21 09:30:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-borland.h
        * ace/config-win32-common.h
        * ace/config-win32-msvc.h
        * ace/OS_NS_stdlib.inl
          WinCE doesn't have wtof, so reworked the defines. Set ACE_HAS_WTOF
          when the platform has wtof, with ACE_WTOF_EQUIVALENT a different
          method name could be used (like ::_wtof)

Tue Oct 21 07:15:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdio.{h,cpp}:
          Added wrappers for sscanf/scanf

        * bin/fuzz.pl: