@@ -1,3 +1,13 @@
+Tue Oct 21 18:31:52 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * apps/gperf/src/Options.cpp:
+        
+          Moved the instantiation of the static ACE_CString
+          members to appear before the global class instantiation,
+          so that the ACE_CString default constructor can in turn
+          initialize its ACE_Allocator member, needed in the
+          Options constructor.
+
 Tue Oct 21 17:33:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/OS_NS_stdio.{h,cpp}:
